# german-organigram

./: .gitignore  README.md  next.config.ts  package.json  pyproject.toml  update_data.sh
.github/workflows/: deploy_nextjs_to_github_pages.yml
public/: HH_2025.csv  HH_2026_draft.csv  anschriftenverzeichnis.json  budget_matches.json  kurz_mapping.json  organizations-index.json
public/organizations/: 1-pzdiv-25360.json  10-pzdiv-25394.json  abcabwkdobw-12072116.json  abvt-31544.json  acatech-ev-813912.json  acfukrbw-4649654.json  adk-85306.json  ads-813170.json  agdd-2055070.json  agdf-44874.json  agentur-fur-innovation-in-der-cybersicherheit-gmbh.json  agj-7543586.json  ahentwg-4604792.json  aif-13180.json  aip-307810.json  amev-7566370.json  aok-bundesverband-15500.json  aok-bw-13390.json  aok-by-13408.json  aok-hb-13442.json  aok-he-13454.json  aok-ni-13480.json  aok-no-13432.json  aok-nw-15494.json  aok-plus-15412.json  aok-rhld-hh-13494.json  aok-rlpsl-15294.json  aok-st-15450.json  apas-6118.json  arl-299488.json  asv-e-v-7588690.json  atb-24738.json  ausbkdo-8739818.json  ausbubzlbwglk-8739918.json  ausbzspezlop-610318.json  avh-13168.json  awi-6050.json  awv-15756.json  ba-14196.json  ba-rd-be-bb-15510.json  (+923 more)
python/: fetch_from_airtable.py  fetch_german_orgs.py
src/app/: globals.css  layout.tsx  page.tsx
src/components/: BudgetTreemap.tsx  DataSourceBadge.tsx  DataSourceCards.tsx  EntitiesGrid.tsx  EntityModal.tsx  FilterControls.tsx  Footer.tsx  ModalHandler.tsx
src/lib/: entities.ts  utils.ts  wikidata.ts
src/types/: entity.ts
(+2 files in other folders)
